Fixed collapsed Nav Pading

--- a/pqr/static/css/stylesheet.less
+++ b/pqr/static/css/stylesheet.less
@@ -43,6 +43,10 @@ body{
 			margin-top: -10px;
 			padding-left: 5px;
 		}	
+
+		.navbar-collapse li{
+			padding-left: 5%;
+		}
 	}
 
 
